force-app/main/default/objects/commissionEmployeeAttainedValue__c.object
<CustomObject>
    <description>This object represents the payment to the employee based on input transactions, attainment schedules, overrides and adjustments.  This (along with adjustments) represents the commission statement for the employee</description>
    <fields>
        <fullName>Adjusted_Commission_Attainment__c</fullName>
        <formula>Original_Commission_Attained__c + Commission_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjusted Commission Attainment</inlineHelpText>
        <label>Adjusted Commission Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Gross_Profit__c</fullName>
        <formula>Original_GP_Dollars__c +  GP_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjusted Gross Profit</inlineHelpText>
        <label>Adjusted Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_of__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Override best off</inlineHelpText>
        <label>Best of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step</fullName>
                </value>
                <value>
                    <fullName>Tier Attained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Adjustments__c</fullName>
        <inlineHelpText>Total Commission Adjustments for this time frame and Sale Rep</inlineHelpText>
        <label>Commission Adjustments</label>
        <summarizedField>commissionAdjustmentDetail__c.Adjustment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>commissionAdjustmentDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>Commission Adjustment</value>
        </summaryFilterItems>
        <summaryForeignKey>commissionAdjustmentDetail__c.Commission_Employee_Attained_Value_Recor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commission_Attainment_Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Commission Attainment Schedule</label>
        <referenceTo>Commission_Attainment_Schedule__c</referenceTo>
        <relationshipLabel>Commission Employee Attained Values</relationshipLabel>
        <relationshipName>Commission_Employee_Attained_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Period_Payout__c</fullName>
        <label>Commission Period Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Commission Period that record is associated with</inlineHelpText>
        <label>Commission Period</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Commission Period Selected must be active</errorMessage>
            <filterItems>
                <field>CommissionPeriod__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CommissionPeriod__c</referenceTo>
        <relationshipLabel>Commission Employee Attained Values</relationshipLabel>
        <relationshipName>Commission_Employee_Attained_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Sales_Rep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Sales Rep Associated with this Attainment</inlineHelpText>
        <label>Commission Sales Rep</label>
        <referenceTo>Commission_Sales_Rep__c</referenceTo>
        <relationshipLabel>Commission Employee Attained Values</relationshipLabel>
        <relationshipName>Commission_Employee_Attained_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Team</label>
        <referenceTo>Commission_Team__c</referenceTo>
        <relationshipLabel>Commission Employee Attained Values</relationshipLabel>
        <relationshipName>Commission_Employee_Attained_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_From_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Adjustments__c</fullName>
        <inlineHelpText>Gross Profit Adjustment Summary from Detail Table</inlineHelpText>
        <label>GP Adjustments</label>
        <summarizedField>commissionAdjustmentDetail__c.Adjustment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>commissionAdjustmentDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>Gross Profit</value>
        </summaryFilterItems>
        <summaryForeignKey>commissionAdjustmentDetail__c.Commission_Employee_Attained_Value_Recor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Commission_Attained__c</fullName>
        <label>Original Commission Attained</label>
        <summarizedField>commissionEmployeeAttainedDetail__c.Comm_Attained__c</summarizedField>
        <summaryForeignKey>commissionEmployeeAttainedDetail__c.Commission_Employee_Attained_Value__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Freight_Cost__c</fullName>
        <label>Original Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_GP_Dollars__c</fullName>
        <formula>IF( ISPICKVAL(Team_Payout_Method__c , &apos;Total Team Contribution&apos;) ,  Team_Revenue_Attained__c  -  Team_Cost_Attained__c  -  Original_Freight_Cost__c   , Original_Revenue__c  -  Original_Total_Cost__c  -  Original_Freight_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original GP Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Revenue__c</fullName>
        <inlineHelpText>Original Revenue Achieved during the period</inlineHelpText>
        <label>Original Revenue Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Total_Cost__c</fullName>
        <label>Original Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overridden_Attainment_Percentage__c</fullName>
        <label>Overridden Attainment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pay_All_Team_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay All Team Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Cost_Attained__c</fullName>
        <label>Team Cost Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Freight_Cost_Attained__c</fullName>
        <label>Team Freight Cost Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_GP_Adjustment__c</fullName>
        <label>Team GP Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>Commission_Team__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Original_GP_Dollars__c</fullName>
        <formula>Team_Revenue_Attained__c -( Team_Cost_Attained__c + Team_Freight_Cost_Attained__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Original GP Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Payout_Method__c</fullName>
        <label>Team Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total Team Contribution</fullName>
                </value>
                <value>
                    <fullName>Individual Contribution</fullName>
                </value>
                <value>
                    <fullName>Commission Year Individual Period Payout Tier</fullName>
                </value>
                <value>
                    <fullName>Commission Year Individual Period Payout Step</fullName>
                </value>
                <value>
                    <fullName>Commission Year Total Team Period Payout Tier</fullName>
                </value>
                <value>
                    <fullName>Commission Year Total Team Period Payout Step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Revenue_Attained__c</fullName>
        <label>Team Revenue Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Freight_Cost__c</fullName>
        <label>Year Freight Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_GP_Adjustments__c</fullName>
        <label>Year GP Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Original_GP_Dollars__c</fullName>
        <formula>Year_Original_Revenue__c -  Year_Original_Total_Coast__c -  Year_Freight_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Original GP Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Original_Revenue__c</fullName>
        <label>Year Original Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Original_Total_Coast__c</fullName>
        <label>Year Original Total Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Team_Cost_Attained__c</fullName>
        <label>Year Team Cost Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Team_Freight_Cost_Attained__c</fullName>
        <label>Year Team Freight Cost Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Team_GP_Adjustment__c</fullName>
        <label>Year Team GP Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Team_Original_GP_Dollars__c</fullName>
        <formula>Year_Team_Revenue_Attained__c -  Year_Team_Cost_Attained__c -  Year_Team_Freight_Cost_Attained__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Team Original GP Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Team_Revenue_Attained__c</fullName>
        <label>Year Team Revenue Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Employee Attained Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Original_Total_Cost__c</columns>
        <columns>Commission_Team__c</columns>
        <columns>Commission_Sales_Rep__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Commission Employee Attained Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Employee Attained Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>